loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:2: error: illegal start of statement
)  avance()
^